[package]
name = "hop-relayd"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
description = "Hop cloud relay daemon — an always-on node bridging local meshes over the internet (DESIGN.md §19, §21)."

[[bin]]
name = "hop-relayd"
path = "src/main.rs"

[dependencies]
hop-core.workspace = true
# plain SQLite (the relay never needs at-rest encryption; its store is a transient mailbox cache)
hop-store-sqlite = { workspace = true, features = ["bundled"] }
hop-store-firestore = { workspace = true, optional = true }
# SIGTERM handler so a Cloud Run shutdown drains the durable-store queue before the instance is
# reaped (F-21). libc is already in the tree transitively.
libc = "0.2"
bs58 = "0.5"
blake3.workspace = true
# Sync WebSocket bearer. Default features = handshake only (no TLS): the global
# load balancer terminates TLS, so the daemon speaks plain ws:// on $PORT.
tungstenite = "0.30"
# HNS resolver (DESIGN.md §30): the cloud relay resolves `_hopaddress.<domain>` TXT over
# DNS-over-HTTPS for peers that ask it. Only in the cloud (firestore) build.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"], optional = true }
serde_json = { version = "1", optional = true }

[features]
# Off by default so a plain VM build stays lean (no reqwest/rustls/tokio). Enable
# for the scale-to-zero Cloud Run deploy that needs the durable Firestore mailbox
# and the backbone (registry heartbeat + pull-on-wake dialing of wss:// peers, which
# needs a TLS WebSocket client).
firestore = ["dep:hop-store-firestore", "dep:reqwest", "dep:serde_json", "tungstenite/rustls-tls-webpki-roots"]
