# --- injected for the standalone mirror by tools/copybara/copy.bara.sky ---
[workspace]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
repository = "https://github.com/hopmesh/monorepo"

[workspace.dependencies]
hop-core = { version = "0.0.1", package = "hop-mesh-core" }
hop-endpoint-core = { version = "0.0.1", package = "hop-mesh-endpoint-core" }
hop-store-sqlite = { version = "0.0.1", default-features = false, package = "hop-mesh-store-sqlite" }
hop-store-firestore = { version = "0.0.1", package = "hop-mesh-store-firestore" }
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["use-std"] }
blake3 = "1"
sha2 = "0.11"
ed25519-dalek = { version = "3", features = ["rand_core"] }
x25519-dalek = { version = "3", features = ["static_secrets"] }
chacha20poly1305 = "0.11"
rand_core = { version = "0.6", features = ["getrandom"] }
thiserror = "2"
miniz_oxide = "0.9"
snow = "0.10"
rusqlite = { version = "0.40", features = ["bundled"] }
# --- end injected preamble ---
[package]
name = "hop-relayd"
version.workspace = true
edition.workspace = true
license-file = "LICENSE.md"
repository.workspace = true
description = "Hop cloud relay daemon, an always-on node bridging local meshes over the internet (DESIGN.md §19, §21)."

[[bin]]
name = "hop-relayd"
path = "src/main.rs"

[dependencies]
hop-core.workspace = true
# plain SQLite (the relay never needs at-rest encryption; its store is a transient mailbox cache)
hop-store-sqlite = { workspace = true, features = ["bundled"] }
hop-store-firestore = { workspace = true, optional = true }
# SIGTERM handler so a Cloud Run shutdown drains the durable-store queue before the instance is
# reaped (F-21). libc is already in the tree transitively.
libc = "0.2"
bs58 = "0.5"
blake3.workspace = true
# Sync WebSocket bearer. Default features = handshake only (no TLS): the global
# load balancer terminates TLS, so the daemon speaks plain ws:// on $PORT.
tungstenite = "0.30"

[features]
# Off by default so a plain VM build stays lean (no rustls/tokio). Enable for the
# scale-to-zero Cloud Run deploy that needs the durable Firestore mailbox and the
# backbone (registry heartbeat + pull-on-wake dialing of wss:// peers, which needs a
# TLS WebSocket client).
firestore = ["dep:hop-store-firestore", "tungstenite/rustls-tls-webpki-roots"]
